crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__jaws_of_defeat_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 139,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever a creature you control enters, target opponent loses life equal to the difference between that creature's power and its toughness."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "ChangesZone",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "LoseLife",
              "amount": {
                "type": "Difference",
                "left": {
                  "type": "Ref",
                  "qty": {
                    "type": "Power",
                    "scope": {
                      "type": "CostPaidObject"
                    }
                  }
                },
                "right": {
                  "type": "Ref",
                  "qty": {
                    "type": "Toughness",
                    "scope": {
                      "type": "CostPaidObject"
                    }
                  }
                }
              },
              "target": {
                "type": "Typed",
                "type_filters": [],
                "controller": "Opponent",
                "properties": []
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": "You",
            "properties": []
          },
          "origin": null,
          "destination": "Battlefield",
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": {
            "type": "Player"
          },
          "valid_source": null,
          "description": "Whenever a creature you control enters, target opponent loses life equal to the difference between that creature's power and its toughness.",
          "constraint": null,
          "condition": null,
          "batched": false
        }
      }
    }
  ],
  "source_text": "Whenever a creature you control enters, target opponent loses life equal to the difference between that creature's power and its toughness.",
  "card_name": "Jaws of Defeat"
}
